@@ -264,7 +264,7 @@ $GLOBALS['TL_LANG']['PAY']['epay_standard']		= array('ePay Standard Payment', 'S
 /**
  * Galleries
  */
-$GLOBALS['TL_LANG']['GAL']['default']			= array('Default gallery (Lightbox/Mediabox)', 'Uses the lightbox/mediabox for full size images. Make sure you select the appropriate moo_ template in your page layout configuration.');
+$GLOBALS['TL_LANG']['GAL']['default']			= array('Default gallery (Lightbox/Mediabox)', '<p>Uses the lightbox/mediabox for full size images. Make sure you select the appropriate moo_ template in your page layout configuration.</p><p>You can supply a "rel" attribute to the link target by using a pipe (eg. "tl_files/video.mov|lightbox[400 300]"). If no "rel" attribute is supplied, the link will be opened in a new window.</p>');
 
 
 /**
